<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference 
            	android:title="@string/pref_user_name" 
            	android:summary="@string/pref_user_name_summary" 
            	android:key="prefUsername"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <EditTextPreference 
            	android:title="@string/pref_host_name" 
            	android:summary="@string/pref_host_name_summary" 
            	android:key="prefHostname"/>
        
        

        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary" 
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>

</PreferenceScreen>